# Scripto

./: .gitignore  README.md  config.py  pyproject.toml  readme.md  requirements.txt  wsgi.py
fountain_parser_service/: index.js  package-lock.json  package.json
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx
frontend/src/api/: index.ts
frontend/src/components/: Editor.tsx  Layout.tsx  SceneNavigationSidebar.tsx  ScreenplayEditor.tsx  ScreenplayPreview.tsx  Sidebar.tsx
frontend/src/contexts/: ThemeContext.tsx
frontend/src/pages/: Dashboard.tsx  ProjectHomepage.tsx  ProjectView.tsx  ScriptView.tsx
frontend/src/utils/: screenplay.ts
scriptforge/: __init__.py  models.py
scriptforge/api/: __init__.py  git_vc.py  parser.py  projects.py  scripts.py
scriptforge/services/: fountain_parser.py  git_service.py
